--- a/app/src/main/res/layout/layout_piese.xml
+++ b/app/src/main/res/layout/layout_piese.xml
@@ -2,6 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="8dp">
 
     <LinearLayout
@@ -11,17 +12,21 @@
 
         <ImageView
             android:id="@+id/item_image"
-            android:layout_width="match_parent"
-            android:layout_height="194dp"
+            android:layout_width="138dp"
+            android:layout_height="143dp"
+            android:layout_gravity="center"
             android:importantForAccessibility="no"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            tools:ignore="ImageContrastCheck" />
 
         <TextView
             android:id="@+id/item_title"
-            android:layout_width="wrap_content"
+            android:layout_width="171dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:padding="16dp"
             android:textAppearance="?attr/textAppearanceHeadline6" />
+
 
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
