--- a/app/src/main/res/layout/layout_piese.xml
+++ b/app/src/main/res/layout/layout_piese.xml
@@ -8,11 +8,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:gravity="center">
+
 
         <ImageView
             android:id="@+id/item_image"
-            android:layout_width="138dp"
+            android:layout_width="284dp"
             android:layout_height="143dp"
             android:layout_gravity="center"
             android:importantForAccessibility="no"
