--- a/app/src/main/res/layout/layout_piese.xml
+++ b/app/src/main/res/layout/layout_piese.xml
@@ -24,11 +24,17 @@
 
         <TextView
             android:id="@+id/item_title"
-            android:layout_width="171dp"
+            android:layout_width="339dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="16dp"
             android:textAppearance="?attr/textAppearanceHeadline6" />
+
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/gif"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:src="@drawable/exemplu_mutari" />
 
 
     </LinearLayout>
